fix status_pannel align

--- a/src/css/status_panel.scss
+++ b/src/css/status_panel.scss
@@ -4,6 +4,10 @@
 	width: 100%;
 	height: 100%;
 	text-align: center;
+	width: -moz-fit-content;
+	text-align: left;
+	margin-left: auto;
+	margin-right: auto;
 	
 	h1 {
 		font-size: 1.5rem;
